--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -16,10 +16,10 @@
                 <div class="chart"><div id="cpuCounter" class="performancePieChart percentage" data-percent=""><div class="percent"></div></div><div class="chartlabel">CPU Usage</div></div>
             </div>
             <div class="col-sm-4">
-                <div class="chart"><div id="ramCounter" class="performancePieChart percentage" data-percent=""><div class="percent"></div></div><div class="chartlabel">RAM Usage</div></div>
+                <div class="chart"><div id="tempCounter" class="performancePieChart percentage temperature" data-percent=""><div class="percent"></div></div><div class="chartlabel">CPU Temperature</div></div>
             </div>
             <div class="col-sm-4">
-                <div id="tempCounter" class="" data-percent="0">0%</div>
+                <div class="chart"><div id="ramCounter" class="performancePieChart percentage" data-percent=""><div class="percent"></div></div><div class="chartlabel">RAM Usage</div></div>
             </div>
         </div>
 
