--- a/devinmajordotcom/Content/templatemo-style2.css
+++ b/devinmajordotcom/Content/templatemo-style2.css
@@ -7,7 +7,11 @@ http://www.templatemo.com/tm-509-hydro
 */  
   @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600');
 
-  .switch {
+.popover {
+    max-width: 100% !important;
+}
+
+.switch {
     position: relative;
     display: inline-block;
     width: 40px;
