--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -14,6 +14,10 @@
 
     <div class="overlay"></div>
     <div class="container" style="">
+        @if (!Model.UserConfig.ShowBanner)
+        {
+            <button type="button" id="settingsWindowButton" class="btn btn-default btn-lg" data-toggle="popover" rel="popover" data-content='@Html.Partial("_HomeSettingsForm", Model.UserConfig)' data-placement="bottom" data-original-title="Settings Menu"><i class="glyphicon glyphicon-cog"></i></button>
+        }
         <div class="row">
 
             <div class="col-sm-12 text-center">
