--- a/devinmajordotcom/Views/Home/Index.cshtml
+++ b/devinmajordotcom/Views/Home/Index.cshtml
@@ -14,28 +14,38 @@
 
     @Html.Partial("_ContactContent", Model)
 
-    @Html.Partial("_ApplicationManager", Model.CurrentApplicationConfig)
-
-
-    @if (!Model.CurrentUserViewModel.UserIsAdmin || !Model.CurrentUserViewModel.UserIsActive)
+    @if (Model.CurrentUserViewModel.UserIsAdmin && Model.CurrentUserViewModel.UserIsActive)
     {
-        @section scripts {
-            <script>
-            var html = '@Html.Raw(@Html.Partial("_LoginModal", Model.CurrentUserViewModel).ToHtmlString().Replace(Environment.NewLine, ""))';
-            $('body').append(html);
-            </script>
-        }
+        @Html.Partial("_ApplicationManager", Model.CurrentApplicationConfig)
     }
 
-    @if (String.IsNullOrEmpty(Model.CurrentUserViewModel.EmailAddress) && Model.CurrentUserViewModel.UserIsAdmin && Model.CurrentUserViewModel.UserIsActive)
-    {
-        @section scripts {
+    @section scripts {
+        
+        <script>
+            var settingsHtml = '@Html.Raw(@Html.Partial("_ApplicationManager", Model.CurrentApplicationConfig).ToHtmlString().Replace(Environment.NewLine, "").Replace("'","\""))';
+        </script>
+
+        @if (!Model.CurrentUserViewModel.UserIsAdmin || !Model.CurrentUserViewModel.UserIsActive)
+        {
             <script>
-            var html = '@Html.Raw(@Html.Partial("_AdminFirstRunModal", Model.CurrentUserViewModel).ToHtmlString().Replace(Environment.NewLine, ""))';
-            $('body').append(html);
-            $("#adminFirstRunFormModal").modal();
+                var loginHtml = '@Html.Raw(@Html.Partial("_LoginModal", Model.CurrentUserViewModel).ToHtmlString().Replace(Environment.NewLine, ""))';
+                $('body').append(loginHtml);
             </script>
         }
+
+        @if (String.IsNullOrEmpty(Model.CurrentUserViewModel.EmailAddress) && Model.CurrentUserViewModel.UserIsAdmin && Model.CurrentUserViewModel.UserIsActive)
+        {
+            <script>
+                var adminHtml = '@Html.Raw(@Html.Partial("_AdminFirstRunModal", Model.CurrentUserViewModel).ToHtmlString().Replace(Environment.NewLine, ""))';
+                $('body').append(adminHtml);
+                $("#adminFirstRunFormModal").modal();
+            </script>
+        }
+
     }
 
 </div>
+
+@Html.Partial("../MediaDashboard/_NewLink")
+@Html.Partial("../Portfolio/_AddNewTechSkill")
+@Html.Partial("../Portfolio/_AddNewLanguageSkill")
