--- a/devinmajordotcom/Views/Shared/_LoginModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_LoginModal.cshtml
@@ -30,34 +30,15 @@
                             <!-- TAB PANES -->
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane fade in active" id="sign_in">
-                                    @using (Ajax.BeginForm("AdminLogin", controllerName, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "HideLoginModal(data)", OnFailure = "" }))
+                                    @using (Ajax.BeginForm("AdminLogin", controllerName, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "HideLoginModal(data)", OnFailure = "LoginFailure(data)" }))
                                     {
                                         @Html.AntiForgeryToken()
                                         <div class="row">
                                             <div class="col-sm-6 text-center">
-                                                <span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.EmailAddress)
-                                            </div>
-                                            <div class="col-sm-6 text-center">
-                                                @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control", @required = "required", placeholder = "someone@domain.com" })
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                @Html.ValidationMessageFor(x => x.EmailAddress)
-                                            </div>
-                                        </div>
-                                        <br />
-                                        <div class="row">
-                                            <div class="col-sm-6 text-center">
-                                                <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.UserName)
+                                                <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;Email Address or Username: @*@Html.LabelFor(x => x.UserName)*@
                                             </div>
                                             <div class="col-sm-6 text-center">
                                                 @Html.TextBoxFor(x => x.UserName, new { @class = "form-control"})
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                @Html.ValidationMessageFor(x => x.UserName)
                                             </div>
                                         </div>
                                         <br />
@@ -69,13 +50,12 @@
                                                 @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @required = "required", placeholder = "********", type="password" })
                                             </div>
                                         </div>
+                                        <br />
                                         <div class="row">
                                             <div class="col-sm-12">
                                                 @Html.ValidationMessageFor(x => x.Password)
                                             </div>
                                         </div>
-                                        <br />
-
                                         <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Get Started!</button>
 
                                     }
