--- a/devinmajordotcom/Views/MediaDashboard/Index.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/Index.cshtml
@@ -139,4 +139,4 @@
     </div>
 </div>
 
-@Html.Partial("_LoginModal", Model.CurrentUserViewModel)
+@Html.Partial("_AdminLoginModal", Model.CurrentUserViewModel)
