--- a/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
@@ -36,50 +36,45 @@
                                         @Html.HiddenFor(x => x.UserID)
                                         @Html.HiddenFor(x => x.GUID)
                                         <div class="row">
-                                            <div class="col-sm-6 text-center">
+                                            <div class="col-sm-12 text-left">
                                                 <span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.EmailAddress)
                                             </div>
-                                            <div class="col-sm-6 text-center">
+                                            <div class="col-sm-12 text-center">
                                                 @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control", @required = "required", placeholder = "someone@domain.com" })
                                             </div>
                                         </div>
+                                        <br />
+                                        <div class="row">
+                                            <div class="col-sm-12 text-left">
+                                                <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.UserName)
+                                            </div>
+                                            <div class="col-sm-12 text-center">
+                                                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control"})
+                                            </div>
+                                        </div>
+                                        <br />
+                                        <div class="row">
+                                            <div class="col-sm-12 text-left">
+                                                <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.Password)
+                                            </div>
+                                            <div class="col-sm-12 text-center">
+                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @required = "required", placeholder = "********", type="password" })
+                                            </div>
+                                        </div>
+                                        <br />
                                         <div class="row">
                                             <div class="col-sm-12">
                                                 @Html.ValidationMessageFor(x => x.EmailAddress)
                                             </div>
-                                        </div>
-                                        <br />
-                                        <div class="row">
-                                            <div class="col-sm-6 text-center">
-                                                <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.UserName)
-                                            </div>
-                                            <div class="col-sm-6 text-center">
-                                                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control"})
-                                            </div>
-                                        </div>
-                                        <div class="row">
                                             <div class="col-sm-12">
                                                 @Html.ValidationMessageFor(x => x.UserName)
                                             </div>
-                                        </div>
-                                        <br />
-                                        <div class="row">
-                                            <div class="col-sm-6 text-center">
-                                                <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.Password)
-                                            </div>
-                                            <div class="col-sm-6 text-center">
-                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @required = "required", placeholder = "********", type="password" })
-                                            </div>
-                                        </div>
-                                        <div class="row">
                                             <div class="col-sm-12">
                                                 @Html.ValidationMessageFor(x => x.Password)
                                             </div>
                                         </div>
-                                        <br />
-
-                                        <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Get Started!</button>
-
+                                        <br/>
+                                        <button type="submit" class="form-control" style="background: #ce3232;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Get Started!</button>
                                     }
                                 </div>
                             </div>
