--- a/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
@@ -34,19 +34,19 @@
                                     {
                                         @Html.AntiForgeryToken()
                                         <div class="row">
-                                            <div class="col-sm-6 text-center">
+                                            <div class="col-sm-12 text-left">
                                                 <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;Email Address or Username: @*@Html.LabelFor(x => x.UserName)*@
                                             </div>
-                                            <div class="col-sm-6 text-center">
+                                            <div class="col-sm-12 text-center">
                                                 @Html.TextBoxFor(x => x.UserName, new { @class = "form-control"})
                                             </div>
                                         </div>
                                         <br />
                                         <div class="row">
-                                            <div class="col-sm-6 text-center">
+                                            <div class="col-sm-12 text-left">
                                                 <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.Password)
                                             </div>
-                                            <div class="col-sm-6 text-center">
+                                            <div class="col-sm-12 text-center">
                                                 @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @required = "required", placeholder = "********", type="password" })
                                             </div>
                                         </div>
@@ -56,7 +56,8 @@
                                                 @Html.ValidationMessageFor(x => x.Password)
                                             </div>
                                         </div>
-                                        <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Get Started!</button>
+                                        <br/>
+                                        <button type="submit" class="form-control" style="background: #ce3232;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Log In!</button>
 
                                     }
                                 </div>
