--- a/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
@@ -1,5 +1,7 @@
 ﻿@model devinmajordotcom.ViewModels.UserViewModel
-
+@{
+    var controllerName = (string)ViewBag.ControllerName;
+}
 <div class="modal fade" id="adminFirstRunFormModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content modal-popup">
@@ -28,20 +30,21 @@
                             <!-- TAB PANES -->
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane fade in active" id="sign_up">
-                                    @using (Ajax.BeginForm("UpdateCurrentUser", "Home", new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "HideAdminFirstRunModal", OnFailure = "" }))
+                                    @using (Ajax.BeginForm("UpdateCurrentUser", controllerName, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "HideAdminFirstRunModal", OnFailure = "" }, new { @class="loginForm" }))
                                     {
                                         @Html.AntiForgeryToken()
                                         @Html.HiddenFor(x => x.UserIsActive)
                                         @Html.HiddenFor(x => x.UserIsAdmin)
                                         @Html.HiddenFor(x => x.UserID)
                                         @Html.HiddenFor(x => x.GUID)
-                                        @Html.HiddenFor(x => x.IsSigningUp)
+                                        @Html.Hidden("IsSigningUp", "True")
+                                        @*@Html.HiddenFor(x => x.IsSigningUp, new { value="True" })*@
                                         <div class="row">
                                             <div class="col-sm-12 text-left">
                                                 <span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.EmailAddress)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control", @required = "required", placeholder = "someone@domain.com" })
+                                                @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control", @required = "required", @type="email", placeholder = "someone@domain.com" })
                                             </div>
                                         </div>
                                         <br />
@@ -50,7 +53,7 @@
                                                 <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.UserName)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control"})
+                                                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", placeholder = "user_123" })
                                             </div>
                                         </div>
                                         <br />
