--- a/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
@@ -30,16 +30,16 @@
                             <!-- TAB PANES -->
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane fade in active" id="sign_in">
-                                    @using (Ajax.BeginForm("AdminLogin", controllerName, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "HideLoginModal(data)", OnFailure = "LoginFailure(data)" }))
+                                    @using (Ajax.BeginForm("AdminLogin", controllerName, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "HideLoginModal(data)", OnFailure = "LoginFailure()" }, new { @class = "loginForm" }))
                                     {
                                         @Html.AntiForgeryToken()
-                                        @Html.HiddenFor(x => x.IsSigningUp)
+                                        @Html.Hidden("IsSigningUp", "False")
                                         <div class="row">
                                             <div class="col-sm-12 text-left">
                                                 <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;Email Address or Username: @*@Html.LabelFor(x => x.UserName)*@
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control"})
+                                                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", placeholder = "someone@domain.com" })
                                             </div>
                                         </div>
                                         <br />
@@ -48,7 +48,7 @@
                                                 <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.Password)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @required = "required", placeholder = "********", type="password" })
+                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control passwordField", @required = "required", placeholder = "********", type="password" })
                                             </div>
                                         </div>
                                         <br />
@@ -61,7 +61,7 @@
                                             </div>
                                         </div>
                                         <br/>
-                                        <button type="submit" class="form-control" style="background: #ce3232;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Log In!</button>
+                                        <button type="submit" class="form-control" style="background: #ce3232; color: white;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Log In!</button>
 
                                     }
                                 </div>
