fixed popover bug, need to handle sgn up success

--- a/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
+++ b/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
@@ -21,7 +21,7 @@
 
                         <div class="col-md-12 col-sm-12">
                             <div class="modal-title">
-                                <h2>devinmajordotcom</h2>
+                                <h2>devinmajor.com</h2>
                             </div>
 
                             <!-- NAV TABS -->
