did something useful

--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -612,10 +612,13 @@ body {
  * Cover
  */
 
+::-webkit-scrollbar { width: 0 !important; }
+
 .cover {
     padding: 80px 20px;
     max-height: 100vh;
-    overflow-y: auto;
+    overflow-y: auto !important;
+    -ms-overflow-style: none;
 }
 .cover .btn-lg {
   padding: 10px 20px;
