--- a/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
@@ -90,7 +90,7 @@
 
     <br/>
 
-    <div id="mediaDashboardLinksContainer" style="overflow:scroll !important;" class="">
+    <div id="mediaDashboardLinksContainer" style="overflow:auto !important;" class="">
         <ul id="mediaDashboardLinksList" class="mediaSortable">
         @foreach (var link in Model.SidebarLinks)
         {
