--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             <li class="landingPageLink @if (link.IsDefault)
                                                        {<text>active</text>}" data-activediv="@link.URL"><a>@link.DisplayName</a></li>
                         }
-                        @if (userViewModel.UserIsAdmin)
+                        @if (userViewModel.UserIsLoggedIn && userViewModel.UserIsAdmin)
                         {
                             <li class="landingPageLink" data-activediv="#appmanager"><a>Settings</a></li>
                         }
