--- a/devinmajordotcom/Views/Home/_ContactContent.cshtml
+++ b/devinmajordotcom/Views/Home/_ContactContent.cshtml
@@ -1,12 +1,17 @@
 ﻿@model devinmajordotcom.ViewModels.MainLandingPageViewModel
-
+@{
+    var config = Model.LandingPageBannerLinks.FirstOrDefault(x => x.IsEnabled && x.URL == "#contact");
+}
 <div style="display:none;" class="inner cover" id="contact">
-
-    <h2 class="title"><strong>@Model.Config.ContactTitle</strong></h2>
-    <hr>
-    <p style="color: #71cef5;">@Model.Config.ContactInstructions</p>
-    <hr>
     
-    @Html.Partial("_ContactEmailForm", Model.ContactEmailData)
+    @if (config != null)
+    {
+        <h2 class="title"><strong>@config.Description</strong></h2>
+        <hr>
+        <p style="color: #71cef5;">@config.Directive</p>
+        <hr>
+    
+        @Html.Partial("_ContactEmailForm", Model.ContactEmailData) 
+    }
 
 </div>
