--- a/devinmajordotcom/Views/Home/_ManageLandingPage.cshtml
+++ b/devinmajordotcom/Views/Home/_ManageLandingPage.cshtml
@@ -78,78 +78,31 @@
                                 </div>
                             </div>
 
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <span class="glyphicon glyphicon-home"></span>
-                                    &nbsp;
-                                    @Html.LabelFor(x => x.Config.AppsIntro, new { @style = "font-weight:normal;" })
-                                </div>
-                                <div class="col-sm-12">
-                                    @Html.TextBoxFor(x => x.Config.AppsIntro, new { @class = "form-control" })
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <span class="glyphicon glyphicon-home"></span>
-                                    &nbsp;
-                                    @Html.LabelFor(x => x.Config.AppsDescription, new { @style = "font-weight:normal;" })
-                                </div>
-                                <div class="col-sm-12">
-                                    @Html.TextBoxFor(x => x.Config.AppsDescription, new { @class = "form-control" })
-                                </div>
-                            </div>
+                            
                         }
-                        else if (link.DisplayName == "Server Status")
-                        {
 
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <span class="glyphicon glyphicon-dashboard"></span>
-                                    &nbsp;
-                                    @Html.LabelFor(x => x.Config.ServerStatusTitle, new { @style = "font-weight:normal;" })
-                                </div>
-                                <div class="col-sm-12">
-                                    @Html.TextBoxFor(x => x.Config.ServerStatusTitle, new { @class = "form-control" })
-                                </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <span class="glyphicon glyphicon-home"></span>
+                                &nbsp;
+                                @Html.LabelFor(o => o.LandingPageBannerLinks[count].Description, new { @style = "font-weight:normal;" })
                             </div>
+                            <div class="col-sm-12">
+                                @Html.TextBoxFor(o => o.LandingPageBannerLinks[count].Description, new { @class = "form-control" })
+                            </div>
+                        </div>
 
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <span class="glyphicon glyphicon-dashboard"></span>
-                                    &nbsp;
-                                    @Html.LabelFor(x => x.Config.ServerStatusDescription, new { @style = "font-weight:normal;" })
-                                </div>
-                                <div class="col-sm-12">
-                                    @Html.TextBoxFor(x => x.Config.ServerStatusDescription, new { @class = "form-control" })
-                                </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <span class="glyphicon glyphicon-home"></span>
+                                &nbsp;
+                                @Html.LabelFor(o => o.LandingPageBannerLinks[count].Directive, new { @style = "font-weight:normal;" })
                             </div>
-                        }
-                        else if (link.DisplayName == "Contact Me")
-                        {
+                            <div class="col-sm-12">
+                                @Html.TextBoxFor(o => o.LandingPageBannerLinks[count].Directive, new { @class = "form-control" })
+                            </div>
+                        </div>
 
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <span class="glyphicon glyphicon-envelope"></span>
-                                    &nbsp;
-                                    @Html.LabelFor(x => x.Config.ContactTitle, new { @style = "font-weight:normal;" })
-                                </div>
-                                <div class="col-sm-12">
-                                    @Html.TextBoxFor(x => x.Config.ContactTitle, new { @class = "form-control" })
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <span class="glyphicon glyphicon-envelope"></span>
-                                    &nbsp;
-                                    @Html.LabelFor(x => x.Config.ContactInstructions, new { @style = "font-weight:normal;" })
-                                </div>
-                                <div class="col-sm-12">
-                                    @Html.TextBoxFor(x => x.Config.ContactInstructions, new { @class = "form-control" })
-                                </div>
-                            </div>
-                        }
                     </div>
                 </div>
                 count++;
