--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 @{
     var userViewModel = (UserViewModel)ViewBag.CurrentUserViewModel;
     var bannerLinks = (List<SiteLinkViewModel>)ViewBag.BannerLinks;
+    var config = (LandingPageConfigViewModel)ViewBag.Config;
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -22,6 +23,13 @@
     <title>@ViewBag.Title</title>
     
     @Styles.Render("~/Content/css")
+    
+    <style>
+        .site-wrapper:before {
+            background-image: url('@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(config.BackgroundImage))');
+        }
+    </style>
+
 </head>
 
 <body>
@@ -37,7 +45,7 @@
                 <div class="inner">
                     <h3 class="masthead-brand text-center">@ViewBag.Title</h3>
                     <ul class="nav masthead-nav">
-                        @foreach (var link in bannerLinks)
+                        @foreach (var link in bannerLinks.Where(x => x.IsEnabled))
                         {
                             <li class="landingPageLink @if (link.IsDefault)
                                                        {<text>active</text>}" data-activediv="@link.URL"><a>@link.DisplayName</a></li>
@@ -58,7 +66,12 @@
 
         </div>
     </div>
-    <canvas id="particles" style="display:none;z-index:1;position:absolute;top:0;left:0;width:100%;height:100%;"></canvas>
+    
+    @if (config.IsParticleCanvasOn)
+    {
+        <canvas id="particles" style="display:none;z-index:1;position:absolute;top:0;left:0;width:100%;height:100%;"></canvas>
+    }
+    
 </div>
 
 
