--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -22,6 +22,7 @@
     <meta name="theme-color" content="#ffffff">
 
     @Styles.Render("~/Content/homecss")
+    @Styles.Render("~/Content/FineUploader")
 
 </head>
 <body>
@@ -72,6 +73,7 @@
 @Scripts.Render("~/bundles/modernizr")
 @Scripts.Render("~/bundles/bootstrap")
 @Scripts.Render("~/bundles/homeScripts")
+@Scripts.Render("~/bundles/FineUploader")
 @Scripts.Render("~/bundles/tinymce")
     
 @RenderSection("scripts", required: false)
