--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -7,8 +7,6 @@
     var newRowHtml = "</div><br/><div class='row'>";
 }
 
-
-
 <!-- HOME -->
 <section id="home" data-stellar-background-ratio="0.5">
     
@@ -135,6 +133,21 @@
     </section>
 
 }
+
+<div class="dontprint modal fade" id="formModalUpload">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title text-center"></h4>
+            </div>
+            <div class="modal-body" id="formModalBodyHolderUpload">
+            </div>
+        </div>
+    </div>
+</div>
 
 @Html.Partial("MyHomeLoginSignupModal", Model.CurrentUserViewModel)
 
