--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -134,7 +134,7 @@
 
 }
 
-<div class="dontprint modal fade" id="formModalUpload">
+<div class="dontprint modal fade" id="formModalUpload" style="z-index: 10000;">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
