--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="container" style="">
         @if (!Model.UserConfig.ShowBanner)
         {
-            <button type="button" id="settingsWindowButton" class="btn btn-default btn-lg" data-toggle="popover" rel="popover" data-content='@Html.Partial("_HomeSettingsForm", Model.UserConfig)' data-placement="bottom" data-original-title="Settings Menu"><i class="glyphicon glyphicon-cog"></i></button>
+            <div id="settingsWindowButton" class="btn btn-default btn-lg" data-toggle="popover" rel="popover" data-content='@Html.Partial("_HomeSettingsForm", Model.UserConfig)' data-placement="bottom" data-original-title="Settings Menu"><i class="glyphicon glyphicon-cog"></i></div>
         }
         <div class="row">
 
@@ -160,7 +160,7 @@
             var string = '<li id="settingsWindowButton" class="btn btn-default btn-lg" data-toggle="popover" rel="popover" data-content=\'';
             var html = '@Html.Raw(@Html.Partial("_HomeSettingsForm", Model.UserConfig).ToHtmlString().Replace(Environment.NewLine, ""))';
             string += html;
-            string += '\' data-placement="bottom" data-original-title="Settings Menu"><i class="glyphicon glyphicon-cog"></i></li>'
+            string += '\' data-placement="bottom" data-original-title="Settings Menu"><i class="glyphicon glyphicon-cog"></i></li>';
             $(".nav.navbar-nav.navbar-right").append(string);
         </text>
     }
