--- a/devinmajordotcom/Views/MyHome/_HomeSettingsForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_HomeSettingsForm.cshtml
@@ -11,7 +11,7 @@
         },
         new
         {
-            @class = "btn btn-primary",
+            @class = "btn btn-default",
         }).ToHtmlString().Replace("REPLACE", "<span class=\"fa fa-upload\"></span>&nbsp;&nbsp;Change Image...");
 }
 @using (Html.BeginForm("_HomeSettingsForm", "MyHome"))
@@ -36,6 +36,8 @@
             </div>
         </div>
 
+        <br/>
+
         <div class="row">
             <div class="col-sm-6">
                 <span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;
@@ -51,6 +53,8 @@
             </div>
         </div>
 
+        <br/>
+
         <div class="row">
             <div class="col-sm-6">
                 <span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;
@@ -63,6 +67,25 @@
         <div class="row">
             <div class="col-sm-12">
                 @Html.ValidationMessageFor(x => x.BlogTitle)
+            </div>
+        </div>
+
+        <br />
+
+        <div class="row">
+            <div class="col-sm-6">
+                <span class="glyphicon glyphicon-wrench"></span>&nbsp;&nbsp;
+                @Html.LabelFor(x => x.BackgroundImage, new { style = "font-weight:normal;" })
+            </div>
+            <div class="col-sm-6">
+                @Html.HiddenFor(x => x.BackgroundImage)
+                <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(Model.BackgroundImage))" id="previewImage" class="img-responsive" alt="Background Image">
+                @Html.Raw(uploadButton)
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                @Html.ValidationMessageFor(x => x.ShowBlog)
             </div>
         </div>
 
@@ -179,24 +202,6 @@
         </div>
 
         <br />
-        
-        <div class="row">
-            <div class="col-sm-6">
-                <span class="glyphicon glyphicon-wrench"></span>&nbsp;&nbsp;
-                @Html.LabelFor(x => x.BackgroundImage, new { style = "font-weight:normal;" })
-            </div>
-            <div class="col-sm-6">
-                @Html.HiddenFor(x => x.BackgroundImage)
-                @Html.Raw(uploadButton)
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                @Html.ValidationMessageFor(x => x.ShowBlog)
-            </div>
-        </div>
-
-        <br />
 
         @{
             var link = Html.ActionLink("REPLACE", "Logout", null, new { @class = "btn btn-primary" }).ToHtmlString();
@@ -205,7 +210,7 @@
 
         <div class="row">
             <div class="col-sm-6 text-center" style="margin-bottom:5px;">
-                <button type="submit" class="btn btns-success"><span class="glyphicon glyphicon-save"></span>&nbsp;Save Settings</button>
+                <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-save"></span>&nbsp;Save Settings</button>
             </div>
             <div class="col-sm-6 text-center" style="margin-bottom:5px;">
                 @Html.Raw(cleanLink)
