--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -48,17 +48,16 @@
 
             <div class="navbar-header">
                 <!-- lOGO TEXT HERE -->
-                <a href="#" class="navbar-brand">MyHome</a>
+                <a href="#" data-toggle="collapse" data-target="#mainLinks" class="navbar-brand">MyHome</a>
             </div>
 
             <!-- MENU LINKS -->
-            <div class="collapse navbar-collapse">
+            <div id="mainLinks" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
                     <li><a href="#home" class="smoothScroll">Home</a></li>
                     <li><a href="#work" class="smoothScroll">@userConfigViewModel.BookmarksTitle</a></li>
                     <li><a href="#blog" class="smoothScroll">@userConfigViewModel.BlogTitle</a></li>
                 </ul>
-
                 <ul class="nav navbar-nav navbar-right">
                     
                 </ul>
