whitespacing and password blankout

--- a/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
+++ b/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
@@ -51,7 +51,7 @@
                                                 <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.Password)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control passwordField", @required = "required", placeholder = "********", type = "password" })
+                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control passwordField", @Value="", @required = "required", placeholder = "********", type = "password" })
                                             </div>
                                         </div>
                                         <br />
@@ -101,7 +101,7 @@
                                                 <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.Password)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @required = "required", placeholder = "********", type = "password" })
+                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @required = "required", @Value = "", placeholder = "********", type = "password" })
                                             </div>
                                         </div>
                                         <br />
