--- a/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
@@ -62,7 +62,7 @@
                                                 <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.Password)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @required = "required", placeholder = "********", type="password" })
+                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @Value = "", @required = "required", placeholder = "********", type="password" })
                                             </div>
                                         </div>
                                         <br />
