--- a/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
@@ -48,7 +48,7 @@
                                                 <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.Password)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control passwordField", @required = "required", placeholder = "********", type="password" })
+                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control passwordField", @Value = "", @required = "required", placeholder = "********", type="password" })
                                             </div>
                                         </div>
                                         <br />
