edit modal works

--- a/devinmajordotcom/Views/MyHome/_HomeSettingsForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_HomeSettingsForm.cshtml
@@ -5,7 +5,7 @@
         {
             HttpMethod = "GET",
             InsertionMode = InsertionMode.Replace,
-            OnComplete = "InitializeModal('#formModalUpload', 'Background Image Uploader');",
+            OnComplete = "InitializeModal('#formModalImageUploader', 'Background Image Uploader');",
             OnFailure = "SettingsUpdateFailure();",
             UpdateTargetId = "formModalBodyHolderUpload"
         },
