--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -5,6 +5,20 @@
     Layout = "../Shared/_HomeLayout.cshtml";
     var linkCount = 1;
     var newRowHtml = "</div><br/><div class='row'>";
+
+    var editFavoritesButton = Ajax.ActionLink("REPLACE", "_EditFavorites", "MyHome", new { userID = Model.CurrentUserViewModel.UserID },
+        new AjaxOptions
+        {
+            HttpMethod = "GET",
+            InsertionMode = InsertionMode.Replace,
+            OnComplete = "InitializeModal('#formModalEditFavorites', 'Edit Favorites & Bookmarks');",
+            UpdateTargetId = "formModalBodyHolder"
+        },
+        new
+        {
+            @class = "btn btn-default"
+        }).ToHtmlString().Replace("REPLACE", "<span class=\"glyphicon glyphicon-pencil\"></span>");
+
 }
 
 <style>
@@ -77,6 +91,11 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title">
                         <h2>@Model.UserConfig.BookmarksTitle</h2>
+                        @if (Model.CurrentUserViewModel.UserIsLoggedIn)
+                        {
+                            <br/>
+                            @Html.Raw(editFavoritesButton)
+                        }
                         <span class="line-bar">...</span>
                     </div>
                 </div>
@@ -154,7 +173,22 @@
 
 }
 
-<div class="dontprint modal fade" id="formModalUpload" style="z-index: 10000;">
+<div class="dontprint modal fade" id="formModalEditFavorites" style="z-index: 10000;">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title text-center"></h4>
+            </div>
+            <div class="modal-body" id="formModalBodyHolder">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="dontprint modal fade" id="formModalImageUploader" style="z-index: 10000;">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
